--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
         "paths": {
             "@/*": ["./resources/js/*"],
             "ziggy-js": ["./vendor/tightenco/ziggy"]
-        }
+        },
+        "typeRoots": ["./node_modules/@types", "./resources/js/types"],
     },
     "include": ["resources/js/**/*.ts", "resources/js/**/*.d.ts", "resources/js/**/*.vue"]
 }
